
import "GameBasic.proto";

package game;

option java_package = "com.orange.network.game.protocol.model";
option java_outer_classname = "DrawProtos";

//// internal usage, to store draw data
message PBDraw {
  required string userId = 1;    
  required string word = 2;
  required int32 level = 3;
  required int32 language = 4;                 // 1 Chinese, 2 English
  optional int32 createDate = 5;
  optional string nickName = 6;
  optional string avatar = 7;
  optional bool   gender = 8;

  repeated PBDrawAction drawData = 10;  
  optional string opusId = 11;
}

message PBFeed {
  required string feedId = 1;
  required string userId = 2;
  required int32  actionType = 3;
  required int32  createDate = 4;
  
  // for user info
  optional string nickName = 21;
  optional string avatar = 22;
  optional bool   gender = 23;

  // for user draw
  optional PBDraw drawData = 31;
  optional string targetUserId = 32;
  optional string targetUserNickName = 33;
  
  // for user guess
  optional string opusId = 41;          // 猜作品的ID
  optional bool   isCorrect = 42;
  optional int32  score = 43;
  repeated string guessWords = 44;  
  optional int32  opusStatus = 45;      // 猜作品的状态：0：正常；1：已删除
  
  // for user comment
  optional string comment = 51;
  
  // common data
  optional int32  matchTimes = 61;
  optional int32  correctTimes = 62;
  optional int32  guessTimes = 63;
  optional int32  commentTimes = 64;

}

