
import "GameBasic.proto";

package game;

option java_package = "com.orange.network.game.protocol.message";
option java_outer_classname = "GameMessageProtos";

message JoinGameRequest {
  required string userId = 1;                  // 用户ID
  required string gameId = 2;                  // 游戏ID，比如你画我猜为：draw
  optional int32  autoNew=3 [default=0];       // 没有合适的游戏加入，则自动创建一个新的

}

message JoinGameResponse {
  required PBGameSession gameSession = 1;
}


enum GameCommandType {
  JOIN_GAME_REQUEST = 1;
  JOIN_GAME_RESPONSE = 2;
}

enum GameResultCode {
  SUCCESS = 0;
  
  ERROR_JOIN_GAME = 1;
}

message GameMessage {
  required GameCommandType command = 1;
  required int32 messageId = 2;                             // 和请求消息对应的消息ID
  optional GameResultCode resultCode = 3;                   // 响应结果，用于响应消息，0为成功
  
  optional JoinGameRequest joinGameRequest = 11;
  optional JoinGameResponse joinGameResponse = 12;
  
  
}
